--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,18 @@
+*{
+  padding: 0;
+  margin: 0;
+  list-style: none !important;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+.container{
+  max-width: 1440px;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @font-face {
     font-family: "Greycliff_CF";
     src: url("../fonts/Greycliff_CF/Greycliffcf-heavy.otf");
