--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   text-decoration: none;
 }
-.container{
+.my_container{
   max-width: 1440px;
   padding-left: 12px;
   padding-right: 12px;
