--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,99 +1,99 @@
-*{
-  padding: 0;
-  margin: 0;
-  list-style: none !important;
-  box-sizing: border-box;
-  text-decoration: none;
+* {
+	padding: 0;
+	margin: 0;
+	list-style: none !important;
+	box-sizing: border-box;
+	text-decoration: none;
 }
-.container{
-  max-width: 1440px;
-  padding-left: 12px;
-  padding-right: 12px;
-  margin-left: auto;
-  margin-right: auto;
+.my_container {
+	max-width: 1440px !important;
+	padding-left: 12px;
+	padding-right: 12px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-heavy.otf");
-    font-weight: 900;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-extrabold.otf");
-    font-weight: 800;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-Bold.otf");
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-demibold.otf");
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/GreycliffCF-Medium.otf");
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-regular.otf");
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-light.otf");
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-thin.otf");
-    font-weight: 200;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Greycliff_CF";
-    src: url("../fonts/Greycliff_CF/Greycliffcf-extralight.otf");
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  /**********************Scroll**************************/
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-heavy.otf");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-extrabold.otf");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-Bold.otf");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-demibold.otf");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/GreycliffCF-Medium.otf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-regular.otf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-light.otf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-thin.otf");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Greycliff_CF";
+  src: url("../fonts/Greycliff_CF/Greycliffcf-extralight.otf");
+  font-weight: 100;
+  font-style: normal;
+}
+
+/**********************Scroll**************************/
 ::-webkit-scrollbar {
-    width: 6px;
-  }
-  
-  /* ::-webkit-scrollbar:focus {
+  width: 6px;
+}
+
+/* ::-webkit-scrollbar:focus {
     50px
   } */
-  
-  ::-webkit-scrollbar-track {
-    background: #000;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: #fe6a5b;
-    border-radius: 5px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: #fe6a5b;
-  }
+
+::-webkit-scrollbar-track {
+  background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fe6a5b;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #fe6a5b;
+}
