--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,3 +117,13 @@
   }
 
   /********* Section Real ************/ 
+.peach-hr {
+  width: 27px;
+  background: #fe6a5b;
+  opacity: 1;
+}
+.grey-hr {
+  width: 70%;
+  opacity: 0.15;
+  background: #000000;
+}
