--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@
   margin-right: auto !important;
 }
 
+.font_roboto {
+  font-family: "Roboto";
+}
+
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-heavy.otf");
@@ -69,10 +73,6 @@
   font-weight: 100;
   font-style: normal;
 }
-.font_roboto {
-  font-family: "Roboto";
-}
-
 /**********************Scroll**************************/
 ::-webkit-scrollbar {
   width: 6px;
@@ -122,72 +122,4 @@
   width: 70%;
   opacity: 0.15;
   background: #000000;
-}
-
-:root {
-  /* font size */
-  --fs_4xl:144px;
-  --fs_3xl:96px;
-  --fs_2xl:44px;
-  --fs_xl:40px;
-  --fs_md:27px;
-  --fs_lght:21px;
-  --fs_lg:20px;
-  --fs_sm:17px;
-  --fs_xsm:16px;
-  --fs_xxsm:13px;
-}
-
-.fs_4xl {
-  font-size: var(--fs_4xl);
-}
-
-.fs_3xl {
-  font-size: var(--fs_3xl);
-}
-
-.fs_2xl {
-  font-size: var(--fs_2xl);
-}
-
-.fs_xl {
-  font-size: var(--fs_xl);
-}
-
-.fs_md {
-  font-size: var(--fs_md);
-}
-
-.fs_lg {
-  font-size: var(--fs_lg);
-}
-
-.fs_lght {
-  font-size: var(--fs_lght);
-}
-
-.fs_sm {
-  font-size: var(--fs_sm);
-}
-
-.fs_xsm {
-  font-size: var(--fs_xsm);
-}
-
-.fs_xxsm {
-  font-size: var(--fs_xxsm);
-}
-
-.my_para {
-  color: red;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 0 !important;
-}
-
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 0 !important;
-}/*# sourceMappingURL=root.css.map */
+}/*# sourceMappingURL=style.css.map */
