--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
   box-sizing: border-box !important;
   text-decoration: none !important;
 }
+
 .container {
   max-width: 1440px;
   padding-left: 12px;
@@ -12,6 +13,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .font_roboto {
   font-family: "Roboto";
 }
@@ -22,63 +24,54 @@
   font-weight: 900;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-extrabold.otf");
   font-weight: 800;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-Bold.otf");
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-demibold.otf");
   font-weight: 600;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/GreycliffCF-Medium.otf");
   font-weight: 500;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-regular.otf");
   font-weight: 400;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-light.otf");
   font-weight: 300;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-thin.otf");
   font-weight: 200;
   font-style: normal;
 }
-
 @font-face {
   font-family: "Greycliff_CF";
   src: url("../fonts/Greycliff_CF/Greycliffcf-extralight.otf");
   font-weight: 100;
   font-style: normal;
 }
-
 /**********************Scroll**************************/
 ::-webkit-scrollbar {
   width: 6px;
@@ -87,7 +80,6 @@
 /* ::-webkit-scrollbar:focus {
     50px
   } */
-
 ::-webkit-scrollbar-track {
   background: #000;
 }
@@ -99,4 +91,4 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background: #fe6a5b;
-}
+}/*# sourceMappingURL=style.css.map */
