--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -256,7 +256,7 @@ p {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh !important;
     position: fixed;
     background-color: #000;
     top: 0;
