--- a/assets/css/root.scss
+++ b/assets/css/root.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 :root {
   /* font size */
-  --fs_4xl: 144px;
+  --fs_4xl: 6px;
   --fs_3xl: 96px;
   --fs_2xl: 44px;
   --fs_xl: 40px;
@@ -232,6 +232,9 @@ p {
     height: 5px !important;
     background-color: #fff;
     z-index: 100 !important;
+    position: absolute;
+    top: 4.5% !important;
+    right: 3% !important;
   }
   .sm-screen {
     display: flex;
@@ -269,29 +272,152 @@ p {
   letter-spacing: 0.3em !important;
 }
 .adovcate_text {
-  font-weight: 800;
+  font-weight: 400 !important;
   letter-spacing: -0.05em;
   line-height: 80% !important;
 }
 .text_orange {
   color: #fe6a5b !important;
+  font-weight: 800 !important;
 }
 .mt_30 {
   margin-top: 30px;
 }
 .header_bg {
   position: absolute;
-  top: 0;
-  right: 0;
-}
-.characters_img {
-  position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.characts_img {
+  position: absolute !important;
+  left: 0 !important;
 }
 .border-grey-left {
   border: 1px solid #262626;
   border-top: none;
   border-bottom: none;
   border-right: none;
+}
+@media (min-width: 576px) {
+  .img_wdth_section_real {
+    width: 80%;
+  }
+  .margin_top_150 {
+    margin-top: 0px;
+  }
+  .img_bussiness {
+    width: 60%;
+  }
+  :root {
+    --fs_4xl: 144px;
+    --fs_3xl: 78px;
+    --fs_2xl: 44px;
+    --fs_xl: 40px;
+    --fs_md: 27px;
+    --fs_lght: 21px;
+    --fs_lg: 20px;
+    --fs_sm: 17px;
+    --fs_xsm: 16px;
+    --fs_xxsm: 13px;
+  }
+}
+@media (min-width: 768px) {
+  .img_wdth_section_real {
+    width: 100%;
+  }
+  .img_bussiness {
+    width: 100%;
+  }
+  .col_border_right_bottom {
+    border-bottom-right-radius: 231px;
+  }
+  .img_construction {
+    transform: translateY(5%);
+  }
+
+  .grey-hr {
+    width: 70%;
+    opacity: 0.15;
+    background: #000000;
+  }
+  .hr_business {
+    height: 2px;
+    width: 90%;
+    opacity: 0.15;
+    background-color: white;
+  }
+  .margin_top_150 {
+    margin-top: 50px;
+  }
+  :root {
+    --fs_4xl: 144px;
+    --fs_3xl: 52px;
+    --fs_2xl: 44px;
+    --fs_xl: 40px;
+    --fs_md: 27px;
+    --fs_lght: 16px;
+    --fs_lg: 20px;
+    --fs_sm: 17px;
+    --fs_xsm: 16px;
+    --fs_xxsm: 13px;
+  }
+}
+@media (min-width: 992px) {
+  .col_border_right_bottom {
+    border-bottom-right-radius: 231px;
+  }
+  .grey-hr {
+    width: 70%;
+    opacity: 0.15;
+    background: #000000;
+  }
+  .hr_business {
+    height: 2px;
+    width: 70%;
+    opacity: 0.15;
+    background-color: white;
+  }
+  .margin_top_150 {
+    margin-top: 40px;
+  }
+  :root {
+    --fs_4xl: 144px;
+    --fs_3xl: 76px;
+    --fs_2xl: 44px;
+    --fs_xl: 40px;
+    --fs_md: 27px;
+    --fs_lght: 21px;
+    --fs_lg: 20px;
+    --fs_sm: 17px;
+    --fs_xsm: 16px;
+    --fs_xxsm: 13px;
+  }
+}
+@media (min-width: 1024px) {
+  .margin_top_150 {
+    margin-top: 50px;
+  }
+  :root {
+    --fs_4xl: 144px;
+    --fs_3xl: 96px;
+    --fs_2xl: 44px;
+    --fs_xl: 40px;
+    --fs_md: 27px;
+    --fs_lght: 21px;
+    --fs_lg: 20px;
+    --fs_sm: 17px;
+    --fs_xsm: 16px;
+    --fs_xxsm: 13px;
+  }
+}
+@media (min-width: 1200px) {
+  .margin_top_150 {
+    margin-top: 90px;
+  }
+}
+@media (min-width: 1320px) {
+  .margin_top_150 {
+    margin-top: 150px;
+  }
 }
