--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -268,19 +268,6 @@ p {
 }
 
 /**************** Root **********************/
-:root {
-  /* font size */
-  --fs_4xl:144px;
-  --fs_3xl:68px;
-  --fs_2xl:44px;
-  --fs_xl:40px;
-  --fs_md:27px;
-  --fs_lght:18px;
-  --fs_lg:20px;
-  --fs_sm:17px;
-  --fs_xsm:16px;
-  --fs_xxsm:13px;
-}
 
 .nav_line:hover::after {
   width: 30px;
@@ -395,7 +382,7 @@ p {
   .img_bussiness {
     width: 60%;
   }
-  :root {
+  /* :root {
     --fs_4xl:144px;
     --fs_3xl:78px;
     --fs_2xl:44px;
@@ -406,7 +393,7 @@ p {
     --fs_sm:17px;
     --fs_xsm:16px;
     --fs_xxsm:13px;
-  }
+  } */
 }
 @media (min-width: 768px) {
   .img_wdth_section_real {
