--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -314,6 +314,74 @@ p {
 .margin_col{
   padding-top: 40px;
 }
+
+/* *********** News Html***************** */
+.card_section_container{
+  max-width: 1200px !important;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-left: auto;
+  margin-right: auto;
+}
+                /* Header */
+.transition_03s {
+  transition: all 0.3s ease-in-out;
+}
+.header_logo{
+  width: 180px;
+  height: 180px;
+}
+.img_header{
+  transform: translateX(2.2%);
+}
+.my_card {
+  width: 350px;
+  height: 469px;
+  background: #ffffff;
+  border: 4px solid #000000;
+  border-radius: 0px 0px 48px 0px;
+  cursor: pointer;
+  transition: all 300ms linear;
+  position: relative;
+  z-index: 100 !important;
+}
+.my_card:hover{
+  background: #000000;
+  transform: rotate(3.3deg);
+  position: absolute;
+}
+.row_padding {
+  padding-top: 150px !important;
+  padding-bottom: 150px;
+ 
+}
+.row_border{
+  border-radius:0px 0px 231px 0px!important;
+}
+.my_card:hover .text_black{
+  color: white;
+}
+.text_black{
+  transition: all 300ms linear;
+  color: black;
+}
+.my_card:hover .news-img {
+  display: flex !important;
+  transition: 0.5s;
+}
+.my_card .news-img {
+  position: absolute;
+  border-radius: 0px 0px 48px 0px;
+  transform: rotate(-5deg);
+  z-index: -10;
+  top: -100px;
+  bottom: auto;
+  display: none;
+  left: -50px;
+  transition: 0.5s;
+}
+
+
 @media (min-width:576px) {
       .img_wdth_section_real{
         width: 70%;
